export const blockHead = [{
    "operations_hash": "LLoaeoirpcGdwX4sb1HxdUFZjWZ4g1FAf2NTJG61b2PvskoPrsFsU",
    "timestamp": 1550105288000,
    "context": "CoUfUWBvLJs8EF5UkgS7ptHK425KxGshRvMv2tZT5CbPJaiZprpK",
    "proto": 1,
    "signature": "sigsif2hGohinyH9gnqEJMxXpbwGas912WJwT8Goba6zvEE7PrvaeYGksVafN3FvK6iFLQ8D2pSnG7QhwLJqg5navfwEYG61",
    "hash": "BLNKu4KzmsMuP9cswnuTfurmuYNHgYaKwq1viNZx5NMYFqpq6JR",
    "fitness": "00,00000000004ff2c8",
    "validation_pass": 0,
    "protocol": "PsddFKi32cMJ2qPjf43Qv5GDWLDPZb3T3bF6fLKiF5HtvHNU7aP",
    "predecessor": "BL8eJ7p4ZBs4P9wUmt2YjvanEwT4wejGYFUyGvTJ24UkMhgAuL1",
    "chain_id": "NetXgtSLGNJvNye",
    "level": 173066
}];

export const block = [{
    "operations_hash": "LLoaD1eTKTaDPaT9xw1tUv46tvyxL9SVHBmUoVt67JuNVvsmtaFQ1",
    "timestamp": 1550108578000,
    "context": "CoWY86X17GsANpZcD93meoarVKLdrTRLAmQuNrMcvQ8epzKaMVbT",
    "proto": 1,
    "signature": "sigtqKsguF1Ck1XeZbmW4Xp3fcKbsXQ9VUNuvzzoRKgVrGhvu7dUWRChbVyiDD8HCwgP8rBqmmwtyhRgJhf8giqa7xpZY61G",
    "hash": "BM9bKSFuZs7rE6Aa5p6Lx1QhqcUeJNf7kEiSEtqAxhz5C2a7mz9",
    "fitness": "00,00000000004ffa9b",
    "validation_pass": 0,
    "protocol": "PsddFKi32cMJ2qPjf43Qv5GDWLDPZb3T3bF6fLKiF5HtvHNU7aP",
    "predecessor": "BLyxiXprmaDkCeZo3b9JHU4udjPiVUpuTR1eKXSxtJe9o8JMbiM",
    "chain_id": "NetXgtSLGNJvNye",
    "level": 173137
}];

export const account = [{
    "block_level": 105158,
    "balance": 3225625875,
    "delegate_value": null,
    "spendable": true,
    "account_id": "tz1L8MjMxQJio8YmmfdFbbVSymbNx5uiX3XT",
    "manager": "tz1L8MjMxQJio8YmmfdFbbVSymbNx5uiX3XT",
    "counter": 15123,
    "block_id": "BMPmbaP1GBqvjm8FhMd94tGrRbfwT2PKBeVLUzWUSKUubuVhxLG",
    "script": null,
    "delegate_setable": false
}];

export const operationgroups = [{
    "branch": "BL9jTP3NwMc5jsMzjhfLLQ37nakgnT6uALXwpmdXUfoC7eK1TYZ",
    "signature": "sigucL9YmCSPPf29e3cNxtpTj35vU1dZ4enYXz9hNcEFYVMif3GjtcZCCjrHkXep6qB73e8nbrACUQZheFBbugEcTYCJhGRY",
    "hash": "opSNAdGiVDZ8p6XtLj4sFCJmdeMrEXvWudj5sB8wMRrW7bU5KvW",
    "block_id": "BLPcavx4rhmZqCot3aZ3TiHdjQ4Ad5Tzs8WPmwJEeuxPx7F2GvQ",
    "protocol": "PsddFKi32cMJ2qPjf43Qv5GDWLDPZb3T3bF6fLKiF5HtvHNU7aP",
    "chain_id": "NetXgtSLGNJvNye"
}, {
    "branch": "BL9jTP3NwMc5jsMzjhfLLQ37nakgnT6uALXwpmdXUfoC7eK1TYZ",
    "signature": "sigSpLJoG1wiGx7F18t8YkabQViwBTZMGHDhn5BeBaWa3x68NFVQELJGVEQX1NEq146eQ5sqVvDtdUU5ukJqHwnxDF3v8x4Q",
    "hash": "oo1tarxtxucitiqn7F4zBSZZGVvpmsak9x4bzueuw1E6zDKUEgJ",
    "block_id": "BLPcavx4rhmZqCot3aZ3TiHdjQ4Ad5Tzs8WPmwJEeuxPx7F2GvQ",
    "protocol": "PsddFKi32cMJ2qPjf43Qv5GDWLDPZb3T3bF6fLKiF5HtvHNU7aP",
    "chain_id": "NetXgtSLGNJvNye"
}, {
    "branch": "BL9jTP3NwMc5jsMzjhfLLQ37nakgnT6uALXwpmdXUfoC7eK1TYZ",
    "signature": "sigmrM7RZo6Zpg5T3meMJfGco4a5X8P76ADdKMfDgdARy5HZrxeckb8GFVDFLULweGWAgwTt7woMri4KqtJ39z7HuhaaJVwZ",
    "hash": "oo6bkt7UDFD7iSG43jqvGviyA8eJjhErhkCDUFg8pcBFQpB5JGE",
    "block_id": "BLPcavx4rhmZqCot3aZ3TiHdjQ4Ad5Tzs8WPmwJEeuxPx7F2GvQ",
    "protocol": "PsddFKi32cMJ2qPjf43Qv5GDWLDPZb3T3bF6fLKiF5HtvHNU7aP",
    "chain_id": "NetXgtSLGNJvNye"
}];

export const operationgroup = [{
    "branch": "BLA3ecN7jh6Vc7XmogePRsdAjjbueG9NHsb32ByL5nbAhMvcNxK",
    "signature": "sigbsjw3WR5LYffiiKPfYQQ2E7t7jpbkb6sWnDDkS6MmjAoNQ9DtyEz7qBe41BEKG4tN6MxhxRdDGUXhUNq9X5s6R4LXKqqp",
    "hash": "ooYPxHKwUgkXxbWVfZFuYnvjNuGtrAgRQEtNrbPXNiwTBbCFW9j",
    "block_id": "BM2H9vU7YPsCwFoqc2CDuhRHseHiNuJ6gXRNYCvvgyNhsWPLTA9",
    "protocol": "PsddFKi32cMJ2qPjf43Qv5GDWLDPZb3T3bF6fLKiF5HtvHNU7aP",
    "chain_id": "NetXgtSLGNJvNye"
}];

export const blocks = [{
    "operations_hash": "LLoaDU5SkhMi2bq4KxmtJZmni1K398KujvzFUXjS64X77E2ZJgY6F",
    "timestamp": 1545149248000,
    "context": "CoW6kvTFyHBgbVRrnreZT9JbjtGFJZWuxUT35w7tjd1TSUtWZc3V",
    "proto": 1,
    "signature": "sigo3BQRmVoiAcfybLqWBiTzvJ4Ngb2hgFsGY7vquGX9XPu1bEXX1LubvwpnaoTbaYVLnUFamEJr1TjZumH5o8Gt5Na3KHU5",
    "hash": "BMRfVngZxpXcq1MjjCb5JiDvbPHP6KFWsMoGUPDETK5aHC49sKF",
    "fitness": "00,000000000011ed88",
    "validation_pass": 0,
    "protocol": "PsddFKi32cMJ2qPjf43Qv5GDWLDPZb3T3bF6fLKiF5HtvHNU7aP",
    "predecessor": "BMRZ5EvrDCZ4FrroS2evhDU2bvkwBmD4wUwxaTv1kSL1AoWMGQC",
    "chain_id": "NetXgtSLGNJvNye",
    "level": 40462
}, {
    "operations_hash": "LLoZpgCx34LG5wVpE8zKeRmkVRJi7jm2RuTtdyQyKb9PKwCyho51g",
    "timestamp": 1545137818000,
    "context": "CoV34yjobKV97hRWocSHExJrNCCVX3Z1QUXNSw6YP7uAtPEvJLhK",
    "proto": 1,
    "signature": "sigRW62HL2vhmLpjq1ByiQC81aztvyj7XQzShn2coiwXV8av7mSskGU47rqvh4B1LHAL2jTvUKjpBvse2okita4ebnNMG79J",
    "hash": "BLwtREycwFvbxttyzgJmnsqnHXjRgHfVf4iPCBE9KyHU6F7NALC",
    "fitness": "00,000000000011cb20",
    "validation_pass": 0,
    "protocol": "PsddFKi32cMJ2qPjf43Qv5GDWLDPZb3T3bF6fLKiF5HtvHNU7aP",
    "predecessor": "BLqVwN6edWdVjER62uoF9N3KcMXZc4or3j2NetsHQnzNJCUwBbR",
    "chain_id": "NetXgtSLGNJvNye",
    "level": 40157
}, {
    "operations_hash": "LLoZUkMg77fWFSDwVZPu14pfxg1g7ewKPBGCavojwcwZwGNp7ea7F",
    "timestamp": 1545138278000,
    "context": "CoUmqYXDjskqZXA31qekZ3E4ELxZT4bYXSZSifuXEypprCpvwM13",
    "proto": 1,
    "signature": "sigh3AmkyPjjHzwXqDy2obo7U79jKzTymC8JE3khCen9AQGZcsYtfKJmqg2NG4hWuKGojw2LKuTnXBPbnJfKCwYqzLtpbF97",
    "hash": "BMYbiZQa1Wci6yGVhH4zWnTbf9L5sR782Fci2BxoaaBFrBXz6PT",
    "fitness": "00,000000000011ccb3",
    "validation_pass": 0,
    "protocol": "PsddFKi32cMJ2qPjf43Qv5GDWLDPZb3T3bF6fLKiF5HtvHNU7aP",
    "predecessor": "BLCVdrescewhP2TrSaKbDgRgdzpUz8HWeeNRR1p24n7ZyyGdgcm",
    "chain_id": "NetXgtSLGNJvNye",
    "level": 40171
}];

export const accounts = [{
    "block_level": 14186,
    "balance": 4000000,
    "delegate_value": null,
    "spendable": false,
    "account_id": "KT1MkVQtRbMH1SY7RXNVPjCjAKRh43UwFf85",
    "manager": "tz1dD918PXDuUHV6Mh6z2QqMukA67YULuhqd",
    "counter": 0,
    "block_id": "BLPHXu6xHiE3A7X5EEZsSJAYkRtHw9eUbe3VhfP33vHLGvykjqT",
    "script": "Map(code -> List(Map(prim -> parameter, args -> List(Map(prim -> timestamp))), Map(prim -> storage, args -> List(Map(prim -> timestamp))), Map(prim -> code, args -> List(List(Map(prim -> CDR), Map(prim -> NIL, args -> List(Map(prim -> operation))), Map(prim -> PAIR))))), storage -> Map(string -> 2017-08-14T18:00:21Z))",
    "delegate_setable": false
}, {
    "block_level": 2450,
    "balance": 1000,
    "delegate_value": null,
    "spendable": true,
    "account_id": "tz1Tzqh3CWLdPoH4kHSqcePatkBVKTwifCHY",
    "manager": "tz1Tzqh3CWLdPoH4kHSqcePatkBVKTwifCHY",
    "counter": 23,
    "block_id": "BMNE84saJibjvgCAdLnKjkxXDh9NBFsA9PLQ1sm62LftpjAnGt8",
    "script": null,
    "delegate_setable": false
}];

export const operations = [{
    "secret": null,
    "delegatable": null,
    "source": "tz1c3yXhrXX1VLMZUuJujjMykwCLDiCy2rPr",
    "timestamp": 1550106608000,
    "pkh": null,
    "nonce": null,
    "block_level": 173094,
    "balance": null,
    "operation_group_hash": "op1qatedZuWMEqcYRVmVTJWW1iPS64NPRN1bEAQDHxjgpTFYWuP",
    "public_key": null,
    "amount": 1000000,
    "delegate": null,
    "block_hash": "BLJ3Dqrhi3c5x9V6u1h7SVbWHiT6qVPSHufJi5J75pn9xxfdfnc",
    "spendable": null,
    "status": "applied",
    "operation_id": 1288229,
    "manager_pubkey": null,
    "slots": null,
    "storage_limit": 0,
    "counter": 14454,
    "script": null,
    "kind": "transaction",
    "gas_limit": 10200,
    "parameters": null,
    "destination": "tz1Np3KV1gSK8ffVBvLkMBTTsYhyDs19Rth7",
    "fee": 1274,
    "level": null
},
{
    "secret": null,
    "delegatable": null,
    "source": "tz1LdZ6S8ScNMgaCLqrekDvbBWhLqtUebk23",
    "timestamp": 1550082248000,
    "pkh": null,
    "nonce": null,
    "block_level": 172502,
    "balance": null,
    "operation_group_hash": "oooK2SFKXNuciNbuF62oTetjwC46VnBxob3Zw4JKcMt8ueUg3kF",
    "public_key": null,
    "amount": 11000000000,
    "delegate": null,
    "block_hash": "BMD95F2TzmX3wqXFruNfBGniyjtLAmM1V9rs7w8RHRZHDb9zo6s",
    "spendable": null,
    "status": "applied",
    "operation_id": 1283852,
    "manager_pubkey": null,
    "slots": null,
    "storage_limit": 0,
    "counter": 532,
    "script": null,
    "kind": "transaction",
    "gas_limit": 10300,
    "parameters": null,
    "destination": "tz1grSBkmXbcnbdedKrU7VhSZy2ApBZvdJh8",
    "fee": 2348,
    "level": null
},
{
    "secret": null,
    "delegatable": null,
    "source": "tz1TEwQuHHuAo3WdujAKKnRCaw4J8cetjBw2",
    "timestamp": 1550077668000,
    "pkh": null,
    "nonce": null,
    "block_level": 172388,
    "balance": null,
    "operation_group_hash": "opPG8EQAckGw2yvK2duJMiJUAkRJYkTd8WAtyEkDqcbFa7JuGg6",
    "public_key": null,
    "amount": 5339,
    "delegate": null,
    "block_hash": "BM1YKdyPBKAD7EkNssBqrMi1H1T4hYBcmApF5q3SS5XGhfyfWLW",
    "spendable": null,
    "status": "applied",
    "operation_id": 1282958,
    "manager_pubkey": null,
    "slots": null,
    "storage_limit": 0,
    "counter": 1839,
    "script": null,
    "kind": "transaction",
    "gas_limit": 10100,
    "parameters": null,
    "destination": "KT18tc1hqQSbdSn1UonpGtRQaJKr2rvFJSyT",
    "fee": 1274,
    "level": null
},
{
    "secret": null,
    "delegatable": null,
    "source": "tz1TEwQuHHuAo3WdujAKKnRCaw4J8cetjBw2",
    "timestamp": 1550077668000,
    "pkh": null,
    "nonce": null,
    "block_level": 172388,
    "balance": null,
    "operation_group_hash": "opPG8EQAckGw2yvK2duJMiJUAkRJYkTd8WAtyEkDqcbFa7JuGg6",
    "public_key": null,
    "amount": 51,
    "delegate": null,
    "block_hash": "BM1YKdyPBKAD7EkNssBqrMi1H1T4hYBcmApF5q3SS5XGhfyfWLW",
    "spendable": null,
    "status": "applied",
    "operation_id": 1282959,
    "manager_pubkey": null,
    "slots": null,
    "storage_limit": 0,
    "counter": 1840,
    "script": null,
    "kind": "transaction",
    "gas_limit": 10100,
    "parameters": null,
    "destination": "KT18tc1hqQSbdSn1UonpGtRQaJKr2rvFJSyT",
    "fee": 1274,
    "level": null
},
{
    "secret": null,
    "delegatable": null,
    "source": "tz1TEwQuHHuAo3WdujAKKnRCaw4J8cetjBw2",
    "timestamp": 1550077668000,
    "pkh": null,
    "nonce": null,
    "block_level": 172388,
    "balance": null,
    "operation_group_hash": "opPG8EQAckGw2yvK2duJMiJUAkRJYkTd8WAtyEkDqcbFa7JuGg6",
    "public_key": null,
    "amount": 53407,
    "delegate": null,
    "block_hash": "BM1YKdyPBKAD7EkNssBqrMi1H1T4hYBcmApF5q3SS5XGhfyfWLW",
    "spendable": null,
    "status": "applied",
    "operation_id": 1282957,
    "manager_pubkey": null,
    "slots": null,
    "storage_limit": 0,
    "counter": 1838,
    "script": null,
    "kind": "transaction",
    "gas_limit": 10100,
    "parameters": null,
    "destination": "KT1U3v18NVDcC5JWQzGQWwrd8aKSsRxyvirH",
    "fee": 1274,
    "level": null
}];

export const transactionfees = [{
    "timestamp": 1551887768000,
    "medium": 900261,
    "low": 0,
    "kind": "transaction",
    "high": 3668825
}];

export const badJSON = '{[;';